Make time functions threadsafe in APR.  This is the current way to make a function thread-safe, when the C Run-Time function it relies on is NOT thread-safe.  For more information, please read the message that will be posted to new-httpd@apache.org regarding this topic.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59273 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -198,6 +198,8 @@ AC_CHECK_FUNCS(sigaction writev)
 AC_CHECK_FUNCS(getpass)
 AC_CHECK_FUNC(_getch)
 
+AC_CHECK_FUNCS(gmtime_r localtime_r)
+
 dnl Start building stuff from our information
 AC_SUBST(LDLIBS)
 AC_SUBST(OPTIM)
