Bring the userdata functions back in line and correct a small error in the makefile.in related to the removal of the file_io/beos files.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59279 13f79535-47bb-0310-9956-ffa450edef68

--- a/threadproc/beos/Makefile.in
+++ b/threadproc/beos/Makefile.in
@@ -10,7 +10,7 @@ LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
 INCDIR=../../inc
 INCDIR1=../../include
-INCDIR2=../../file_io/@OSDIR@
+INCDIR2=../../file_io/unix
 INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I$(INCDIR2) -I.
 
 LIB=libthreadproc.a
