This allows the build process for APR to make use of the extra flexability in the configure process.  The MODULES and SUBDIRS are now generated by configure.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59287 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.in
+++ b/Makefile.in
@@ -24,9 +24,8 @@ INCLUDES=-I$(INCDIR) -I$(INCDIR1)
 #
 # Macros for target determination
 #
-MODULES=lib file_io network_io threadproc locks misc time signal
-SUBDIRS=lib file_io/@OSDIR@ network_io/@OSDIR@ threadproc/@OSDIR@ \
-        locks/@OSDIR@ misc/@OSDIR@ time/@OSDIR@ signal/@OSDIR@ 
+MODULES=@MODULES@
+SUBDIRS=@SUBDIRS@
 #shmem/@OSDIR@
 
 #
