Attempt to port mpmt_pthreads to APR, but threads seem to be broken on my plaform so it is only partially tested.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59301 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -28,6 +28,9 @@ AC_PROG_MAKE_SET
 AC_CHECK_PROG(RM, rm, rm)
 AC_CHECK_PROG(AR, ar, ar)
 
+AC_ARG_WITH(debug,[  --with-debug              Turn on debugging and compile time warnings],
+	[if test "$GCC" = "yes"; then CFLAGS="$CFLAGS -g -Wall"; else CFLAGS="$CFLAGS -g"; fi])
+
 dnl # this is the place to put specific options for platform/compiler
 dnl # combinations
 case "$OS:$CC" in
