Fixing a couple of small bugs in the beos code.
Adjust the way that the check for OSDIR is done.  As beos used to have
a file_io and a time dircetory they still show up in the CVS tarballs and
so the check was failing.  Thinking about it it's better to look for the
Makefile.in in a directory anyway so thats what this patch does.  With it
everything still works.

PR:
Obtained from:
Submitted by:
Reviewed by:


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59302 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -223,7 +223,7 @@ MAKEFILE1="Makefile lib/Makefile "
 SUBDIRS="lib "
 for dir in $MODULES
 do
-    if test -d $dir/$OSDIR; then
+    if test -f $dir/$OSDIR/Makefile.in; then
         MAKEFILE2="$MAKEFILE2 $dir/$OSDIR/Makefile "
         SUBDIRS="$SUBDIRS $dir/$OSDIR "
     else
