Bring network code to the parameter order spec.  This means contexts go last, and result parameters go first.  Also fixed a small bug in the Makefile.  We should be removing the libs dir when we do a distclean, we are now.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59303 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.in
+++ b/Makefile.in
@@ -52,6 +52,7 @@ distclean: subdirs_distclean
 	-$(RM) -f *.o *.a *.so
 	-$(RM) -f config.cache config.status config.log
 	-$(RM) -f Makefile
+	-$(RM) -Rf libs
 
 subdirs:
 	@for i in $(SUBDIRS); do \
