OS/2: Compile with multi-threaded switch so we get things like thread safe errno etc.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59307 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -87,7 +87,7 @@ AC_CHECK_LIB(pthread, pthread_mutex_init, AC_DEFINE(USE_PTHREAD_SERIALIZE))
 
 case "$OS" in
    *-os2*)
-       CFLAGS="$CFLAGS -DOS2"
+       CFLAGS="$CFLAGS -DOS2 -Zmt"
        OSDIR="os2"
        LIBPREFIX=""
        ;;
