OS/2: Use the (slightly tweaked) unix start.c instead of our own.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59335 13f79535-47bb-0310-9956-ffa450edef68

--- a/misc/os2/Makefile.in
+++ b/misc/os2/Makefile.in
@@ -51,7 +51,10 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-start.o: start.c $(INCDIR1)/apr_general.h \
+getopt.o: getopt.c misc.h $(INCDIR1)/apr_general.h \
+ $(INCDIR1)/apr_config.h $(INCDIR1)/apr_errno.h \
+ $(INCDIR1)/apr_file_io.h
+start.o: start.c ../unix/start.c $(INCDIR1)/apr_general.h \
  $(INCDIR1)/apr_config.h $(INCDIR1)/apr_errno.h \
  $(INCDIR)/apr_pools.h $(INCDIR1)/apr_lib.h \
- $(INCDIR1)/apr_file_io.h $(INCDIR1)/hsregex.h misc.h
+ $(INCDIR1)/apr_file_io.h ../unix/misc.h
