--- a/file_io/os2/Makefile.in
+++ b/file_io/os2/Makefile.in
@@ -60,36 +60,31 @@ depend:
 # DO NOT REMOVE
 dir.o: dir.c fileio.h $(INCDIR1)/apr_general.h \
  $(INCDIR1)/apr_config.h $(INCDIR1)/apr_errno.h \
- $(INCDIR1)/apr_file_io.h $(INCDIR1)/apr_lib.h \
- $(INCDIR1)/hsregex.h
+ $(INCDIR1)/apr_file_io.h $(INCDIR1)/apr_lib.h
 fileacc.o: fileacc.c fileio.h $(INCDIR1)/apr_general.h \
  $(INCDIR1)/apr_config.h $(INCDIR1)/apr_errno.h \
- $(INCDIR1)/apr_file_io.h $(INCDIR1)/apr_lib.h \
- $(INCDIR1)/hsregex.h
+ $(INCDIR1)/apr_file_io.h $(INCDIR1)/apr_lib.h
 filedup.o: filedup.c fileio.h $(INCDIR1)/apr_general.h \
  $(INCDIR1)/apr_config.h $(INCDIR1)/apr_errno.h \
- $(INCDIR1)/apr_file_io.h $(INCDIR1)/apr_lib.h \
- $(INCDIR1)/hsregex.h
+ $(INCDIR1)/apr_file_io.h $(INCDIR1)/apr_lib.h
 filestat.o: filestat.c fileio.h $(INCDIR1)/apr_general.h \
  $(INCDIR1)/apr_config.h $(INCDIR1)/apr_errno.h \
- $(INCDIR1)/apr_file_io.h $(INCDIR1)/apr_lib.h \
- $(INCDIR1)/hsregex.h
+ $(INCDIR1)/apr_file_io.h $(INCDIR1)/apr_lib.h
 maperrorcode.o: maperrorcode.c $(INCDIR1)/apr_file_io.h \
  $(INCDIR1)/apr_general.h $(INCDIR1)/apr_config.h \
  $(INCDIR1)/apr_errno.h
 open.o: open.c fileio.h $(INCDIR1)/apr_general.h \
  $(INCDIR1)/apr_config.h $(INCDIR1)/apr_errno.h \
  $(INCDIR1)/apr_file_io.h $(INCDIR1)/apr_lib.h \
- $(INCDIR1)/hsregex.h
+ $(INCDIR1)/apr_portable.h $(INCDIR1)/apr_thread_proc.h \
+ $(INCDIR1)/apr_win.h $(INCDIR1)/apr_network_io.h \
+ $(INCDIR1)/apr_lock.h $(INCDIR1)/apr_time.h
 pipe.o: pipe.c fileio.h $(INCDIR1)/apr_general.h \
  $(INCDIR1)/apr_config.h $(INCDIR1)/apr_errno.h \
- $(INCDIR1)/apr_file_io.h $(INCDIR1)/apr_lib.h \
- $(INCDIR1)/hsregex.h
+ $(INCDIR1)/apr_file_io.h $(INCDIR1)/apr_lib.h
 readwrite.o: readwrite.c fileio.h $(INCDIR1)/apr_general.h \
  $(INCDIR1)/apr_config.h $(INCDIR1)/apr_errno.h \
- $(INCDIR1)/apr_file_io.h $(INCDIR1)/apr_lib.h \
- $(INCDIR1)/hsregex.h
+ $(INCDIR1)/apr_file_io.h $(INCDIR1)/apr_lib.h
 seek.o: seek.c fileio.h $(INCDIR1)/apr_general.h \
  $(INCDIR1)/apr_config.h $(INCDIR1)/apr_errno.h \
- $(INCDIR1)/apr_file_io.h $(INCDIR1)/apr_lib.h \
- $(INCDIR1)/hsregex.h
+ $(INCDIR1)/apr_file_io.h $(INCDIR1)/apr_lib.h
