Make use of -lcrypt conditional on actually having libcrypt.a
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59347 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -103,6 +103,7 @@ esac
 AC_CHECK_LIB(dl, dlopen)
 AC_CHECK_LIB(pthread, pthread_mutex_init)
 AC_CHECK_LIB(socket,socket)
+AC_CHECK_LIB(crypt,crypt)
 AC_CHECK_LIB(ufc,crypt)
 
 if test ".$SYS_SW" = ".AIX"; then
