Simplify time/os2 directory by using a default.c module that #includes common modules from the unix directory as suggested by David Reid.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59361 13f79535-47bb-0310-9956-ffa450edef68

--- a/time/os2/Makefile.in
+++ b/time/os2/Makefile.in
@@ -14,8 +14,7 @@ INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I.
 
 LIB=time.a
 
-OBJS=time.o \
-	access.o
+OBJS=default.o
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
