OS/2: Update dependencies
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59372 13f79535-47bb-0310-9956-ffa450edef68

--- a/locks/os2/Makefile.in
+++ b/locks/os2/Makefile.in
@@ -54,6 +54,5 @@ depend:
 # DO NOT REMOVE
 locks.o: locks.c $(INCDIR1)/apr_general.h \
  $(INCDIR1)/apr_config.h $(INCDIR1)/apr_errno.h \
- $(INCDIR1)/apr_lib.h $(INCDIR1)/apr_file_io.h \
- $(INCDIR1)/hsregex.h locks.h $(INCDIR1)/apr_lock.h \
- $(INCDIR2)/fileio.h
+ $(INCDIR1)/apr_lib.h $(INCDIR1)/apr_file_io.h locks.h \
+ $(INCDIR1)/apr_lock.h $(INCDIR2)/fileio.h
