--- a/time/os2/Makefile.in
+++ b/time/os2/Makefile.in
@@ -50,13 +50,10 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-access.o: access.c ../unix/access.c ../unix/atime.h \
+default.o: default.c ../unix/access.c ../unix/atime.h \
  $(INCDIR1)/apr_time.h $(INCDIR1)/apr_general.h \
  $(INCDIR1)/apr_config.h $(INCDIR1)/apr_errno.h \
- $(INCDIR1)/apr_lib.h $(INCDIR1)/apr_file_io.h
-time.o: time.c ../unix/time.c ../unix/atime.h $(INCDIR1)/apr_time.h \
- $(INCDIR1)/apr_general.h $(INCDIR1)/apr_config.h \
- $(INCDIR1)/apr_errno.h $(INCDIR1)/apr_lib.h \
- $(INCDIR1)/apr_file_io.h $(INCDIR1)/apr_portable.h \
- $(INCDIR1)/apr_thread_proc.h $(INCDIR1)/apr_win.h \
- $(INCDIR1)/apr_network_io.h $(INCDIR1)/apr_lock.h
+ $(INCDIR1)/apr_lib.h $(INCDIR1)/apr_file_io.h ../unix/time.c \
+ $(INCDIR1)/apr_portable.h $(INCDIR1)/apr_thread_proc.h \
+ $(INCDIR1)/apr_win.h $(INCDIR1)/apr_network_io.h \
+ $(INCDIR1)/apr_lock.h $(INCDIR)/apr_macro.h
