--- a/file_io/os2/Makefile.in
+++ b/file_io/os2/Makefile.in
@@ -70,9 +70,9 @@ filedup.o: filedup.c fileio.h $(INCDIR1)/apr_general.h \
 filestat.o: filestat.c fileio.h $(INCDIR1)/apr_general.h \
  $(INCDIR1)/apr_config.h $(INCDIR1)/apr_errno.h \
  $(INCDIR1)/apr_file_io.h $(INCDIR1)/apr_lib.h
-maperrorcode.o: maperrorcode.c $(INCDIR1)/apr_file_io.h \
- $(INCDIR1)/apr_general.h $(INCDIR1)/apr_config.h \
- $(INCDIR1)/apr_errno.h
+maperrorcode.o: maperrorcode.c fileio.h $(INCDIR1)/apr_general.h \
+ $(INCDIR1)/apr_config.h $(INCDIR1)/apr_errno.h \
+ $(INCDIR1)/apr_file_io.h
 open.o: open.c fileio.h $(INCDIR1)/apr_general.h \
  $(INCDIR1)/apr_config.h $(INCDIR1)/apr_errno.h \
  $(INCDIR1)/apr_file_io.h $(INCDIR1)/apr_lib.h \
