--- a/configure.in
+++ b/configure.in
@@ -179,7 +179,6 @@ AC_CHECK_HEADERS(sys/stat.h)
 AC_CHECK_HEADERS(sys/types.h)
 AC_CHECK_HEADERS(sys/wait.h)
 
-AC_CHECK_HEADERS(pthread.h)
 AC_CHECK_HEADERS(kernel/OS.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
@@ -209,6 +208,28 @@ AC_CHECK_FUNCS(getpass)
 AC_CHECK_FUNC(_getch)
 
 AC_CHECK_FUNCS(gmtime_r localtime_r)
+
+AC_MSG_CHECKING(whether to enable thread support)
+AC_ARG_ENABLE(threads,
+[  --enable-threads  Enable threading support in APR.],
+[
+  if test "$enableval" = "no"; then 
+    AC_DEFINE(APR_HAS_THREADS, 0)
+    AC_MSG_RESULT(no)
+  else
+    if test "$enableval" = "pthread"; then
+      AC_CHECK_HEADERS(pthread.h, [ AC_DEFINE(APR_HAS_THREADS, 1) ], [ AC_DEFINE(APR_HAS_THREADS, 0) ] )
+      AC_MSG_RESULT(yes)
+    else
+      AC_MSG_RESULT(no)
+    fi
+  fi
+],
+[
+  AC_CHECK_HEADERS(pthread.h, [ AC_DEFINE(APR_HAS_THREADS, 1) ], [ AC_DEFINE(APR_HAS_THREADS, 0) ] )
+   
+]) 
+
 
 dnl Start building stuff from our information
 AC_SUBST(LDLIBS)
