This set of changes adds the function ap_mmap_open_create which allows an ap_file_t to be mmap'd.  This was requested and so here it is.  Test program has been updated to test this.  Also mmap has now been added to the module list in configure.in so it will now be built.
PR:
Obtained from:
Submitted by: david reid
Reviewed by:


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59402 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -4,7 +4,7 @@ OS=`./config.sub $OS`
 
 # These added to allow default directories to be used...
 DEFAULT_OSDIR="unix"
-MODULES="file_io network_io threadproc misc signal locks time" 
+MODULES="file_io network_io threadproc misc signal locks time mmap" 
 
 echo "Configuring APR library"
 echo "Platform: ${OS}"
