Well having added the file guess I should really include it!
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59417 13f79535-47bb-0310-9956-ffa450edef68

--- a/network_io/beos/Makefile.in
+++ b/network_io/beos/Makefile.in
@@ -18,7 +18,8 @@ OBJS=poll.o \
 	sendrecv.o \
 	sockets.o \
 	sockopt.o \
-         inet_aton.o
+         inet_aton.o \
+         sockaddr.o
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
