OS/2: Bypass EMX library's socket code and go straight to the OS/2 TCP/IP stack. This should be more efficient and prevents handle collisions when using native file API calls. This also means that file I/O calls (read()/write() etc) can no longer be used on sockets.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59424 13f79535-47bb-0310-9956-ffa450edef68

--- a/network_io/os2/Makefile.in
+++ b/network_io/os2/Makefile.in
@@ -18,7 +18,8 @@ OBJS=poll.o \
 	sendrecv.o \
 	sockets.o \
 	sockopt.o \
-	sockaddr.o
+	sockaddr.o \
+	os2calls.o
 
 .c.o:
 	$(CC) $(CFLAGS) -c $(INCLUDES) $<
