Remake the unix dependencies.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59426 13f79535-47bb-0310-9956-ffa450edef68

--- a/locks/unix/Makefile.in
+++ b/locks/unix/Makefile.in
@@ -57,9 +57,10 @@ crossproc.o: crossproc.c ../../include/apr_lock.h \
  ../../include/apr_general.h ../../include/apr_config.h \
  ../../include/apr_errno.h ../../include/apr_lib.h \
  ../../include/apr_file_io.h locks.h
-intraproc.o: intraproc.c ../../include/apr_lock.h \
- ../../include/apr_general.h ../../include/apr_config.h \
- ../../include/apr_errno.h locks.h ../../include/apr_file_io.h
+intraproc.o: intraproc.c ../../include/apr_config.h \
+ ../../include/apr_lock.h ../../include/apr_general.h \
+ ../../include/apr_errno.h ../../include/apr_lib.h \
+ ../../include/apr_file_io.h locks.h
 locks.o: locks.c ../../include/apr_general.h \
  ../../include/apr_config.h ../../include/apr_errno.h \
  ../../include/apr_portable.h ../../include/apr_thread_proc.h \
