--- a/threadproc/unix/Makefile.in
+++ b/threadproc/unix/Makefile.in
@@ -56,36 +56,32 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-proc.o: proc.c threadproc.h ../../include/apr_thread_proc.h \
- ../../include/apr_file_io.h ../../include/apr_general.h \
- ../../include/apr_config.h ../../include/apr_errno.h \
+proc.o: proc.c threadproc.h ../../include/apr_config.h \
+ ../../include/apr_thread_proc.h ../../include/apr_file_io.h \
+ ../../include/apr_general.h ../../include/apr_errno.h \
  ../../include/apr_win.h ../../file_io/unix/fileio.h \
  ../../include/apr_lib.h ../../include/apr_portable.h \
  ../../include/apr_network_io.h ../../include/apr_lock.h \
  ../../include/apr_time.h
-procsup.o: procsup.c threadproc.h ../../include/apr_thread_proc.h \
- ../../include/apr_file_io.h ../../include/apr_general.h \
- ../../include/apr_config.h ../../include/apr_errno.h \
+procsup.o: procsup.c threadproc.h ../../include/apr_config.h \
+ ../../include/apr_thread_proc.h ../../include/apr_file_io.h \
+ ../../include/apr_general.h ../../include/apr_errno.h \
  ../../include/apr_win.h ../../file_io/unix/fileio.h \
  ../../include/apr_lib.h
-signals.o: signals.c threadproc.h ../../include/apr_thread_proc.h \
- ../../include/apr_file_io.h ../../include/apr_general.h \
- ../../include/apr_config.h ../../include/apr_errno.h \
+signals.o: signals.c threadproc.h ../../include/apr_config.h \
+ ../../include/apr_thread_proc.h ../../include/apr_file_io.h \
+ ../../include/apr_general.h ../../include/apr_errno.h \
  ../../include/apr_win.h ../../file_io/unix/fileio.h
-thread.o: thread.c threadproc.h ../../include/apr_thread_proc.h \
- ../../include/apr_file_io.h ../../include/apr_general.h \
- ../../include/apr_config.h ../../include/apr_errno.h \
+thread.o: thread.c ../../include/apr_config.h threadproc.h \
+ ../../include/apr_thread_proc.h ../../include/apr_file_io.h \
+ ../../include/apr_general.h ../../include/apr_errno.h \
  ../../include/apr_win.h ../../include/apr_portable.h \
  ../../include/apr_network_io.h ../../include/apr_lock.h \
  ../../include/apr_time.h ../../include/apr_lib.h
-threadcancel.o: threadcancel.c threadproc.h \
+threadcancel.o: threadcancel.c
+threadpriv.o: threadpriv.c ../../include/apr_config.h threadproc.h \
  ../../include/apr_thread_proc.h ../../include/apr_file_io.h \
- ../../include/apr_general.h ../../include/apr_config.h \
- ../../include/apr_errno.h ../../include/apr_win.h
-threadpriv.o: threadpriv.c threadproc.h \
- ../../include/apr_thread_proc.h ../../include/apr_file_io.h \
- ../../include/apr_general.h ../../include/apr_config.h \
- ../../include/apr_errno.h ../../include/apr_win.h \
- ../../include/apr_portable.h ../../include/apr_network_io.h \
- ../../include/apr_lock.h ../../include/apr_time.h \
- ../../include/apr_lib.h
+ ../../include/apr_general.h ../../include/apr_errno.h \
+ ../../include/apr_win.h ../../include/apr_portable.h \
+ ../../include/apr_network_io.h ../../include/apr_lock.h \
+ ../../include/apr_time.h ../../include/apr_lib.h
