--- a/misc/beos/Makefile.in
+++ b/misc/beos/Makefile.in
@@ -50,3 +50,10 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
+getopt.o: getopt.c misc.h ../../include/apr_general.h \
+ ../../include/apr_config.h ../../include/apr_errno.h \
+ ../../include/apr_file_io.h
+start.o: start.c ../../include/apr_config.h \
+ ../../include/apr_general.h ../../include/apr_errno.h \
+ $(INCDIR)/apr_pools.h ../../include/apr_lib.h \
+ ../../include/apr_file_io.h misc.h
