--- a/network_io/beos/Makefile.in
+++ b/network_io/beos/Makefile.in
@@ -54,12 +54,26 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
+inet_aton.o: inet_aton.c networkio.h ../../include/apr_general.h \
+ ../../include/apr_config.h ../../include/apr_errno.h
 poll.o: poll.c networkio.h ../../include/apr_general.h \
- ../../include/apr_errno.h ../../include/apr_network_io.h
+ ../../include/apr_config.h ../../include/apr_errno.h \
+ ../../include/apr_network_io.h
 sendrecv.o: sendrecv.c networkio.h ../../include/apr_general.h \
- ../../include/apr_errno.h ../../include/apr_network_io.h
-socket.o: socket.c
+ ../../include/apr_config.h ../../include/apr_errno.h \
+ ../../file_io/unix/fileio.h ../../include/apr_file_io.h \
+ ../../include/apr_network_io.h
+sockaddr.o: sockaddr.c networkio.h ../../include/apr_general.h \
+ ../../include/apr_config.h ../../include/apr_errno.h \
+ ../../include/apr_network_io.h ../../include/apr_lib.h \
+ ../../include/apr_file_io.h
 sockets.o: sockets.c networkio.h ../../include/apr_general.h \
- ../../include/apr_errno.h ../../include/apr_network_io.h
+ ../../include/apr_config.h ../../include/apr_errno.h \
+ ../../include/apr_network_io.h ../../include/apr_portable.h \
+ ../../include/apr_thread_proc.h ../../include/apr_file_io.h \
+ ../../include/apr_win.h ../../include/apr_lock.h \
+ ../../include/apr_time.h ../../include/apr_lib.h
 sockopt.o: sockopt.c networkio.h ../../include/apr_general.h \
- ../../include/apr_errno.h ../../include/apr_network_io.h
+ ../../include/apr_config.h ../../include/apr_errno.h \
+ ../../include/apr_network_io.h ../../include/apr_lib.h \
+ ../../include/apr_file_io.h
