--- a/mmap/unix/Makefile.in
+++ b/mmap/unix/Makefile.in
@@ -50,4 +50,17 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-mmap.o: mmap.c
+common.o: common.c ../../file_io/unix/fileio.h \
+ ../../include/apr_general.h ../../include/apr_config.h \
+ ../../include/apr_errno.h ../../include/apr_file_io.h \
+ ../../include/apr_mmap.h ../../include/apr_network_io.h \
+ ../../include/apr_portable.h ../../include/apr_thread_proc.h \
+ ../../include/apr_win.h ../../include/apr_lock.h \
+ ../../include/apr_time.h ../../include/apr_lib.h mmap_h.h
+mmap.o: mmap.c mmap_h.h ../../include/apr_general.h \
+ ../../include/apr_config.h ../../include/apr_errno.h \
+ ../../include/apr_mmap.h ../../include/apr_network_io.h \
+ ../../include/apr_portable.h ../../include/apr_thread_proc.h \
+ ../../include/apr_file_io.h ../../include/apr_win.h \
+ ../../include/apr_lock.h ../../include/apr_time.h \
+ ../../file_io/unix/fileio.h ../../include/apr_lib.h
