--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -66,8 +66,8 @@ apr_cpystrn.o: apr_cpystrn.c ../include/apr_config.h \
  ../include/apr_file_io.h
 apr_execve.o: apr_execve.c ../include/apr_config.h
 apr_fnmatch.o: apr_fnmatch.c ../include/apr_config.h \
- $(INCDIR)/apr_fnmatch.h ../include/apr_lib.h ../include/apr_general.h \
- ../include/apr_errno.h ../include/apr_file_io.h
+ ../include/apr_fnmatch.h ../include/apr_errno.h ../include/apr_lib.h \
+ ../include/apr_general.h ../include/apr_file_io.h
 apr_getpass.o: apr_getpass.c ../include/apr_config.h \
  ../include/apr_lib.h ../include/apr_general.h ../include/apr_errno.h \
  ../include/apr_file_io.h
@@ -75,9 +75,9 @@ apr_md5.o: apr_md5.c ../include/apr_config.h ../include/apr_md5.h \
  ../include/apr_lib.h ../include/apr_general.h ../include/apr_errno.h \
  ../include/apr_file_io.h
 apr_pools.o: apr_pools.c ../include/apr_config.h \
- ../include/apr_general.h ../include/apr_errno.h $(INCDIR)/apr_pools.h \
- ../include/apr_lib.h ../include/apr_file_io.h ../include/apr_lock.h \
- ../misc/unix/misc.h
+ ../include/apr_general.h ../include/apr_errno.h \
+ ../include/apr_pools.h ../include/apr_lib.h ../include/apr_file_io.h \
+ ../include/apr_lock.h ../misc/unix/misc.h ../include/apr_getopt.h
 apr_signal.o: apr_signal.c ../include/apr_config.h \
  ../include/apr_lib.h ../include/apr_general.h ../include/apr_errno.h \
  ../include/apr_file_io.h
@@ -88,5 +88,6 @@ apr_snprintf.o: apr_snprintf.c ../include/apr_config.h \
  ../include/apr_lib.h ../include/apr_general.h ../include/apr_errno.h \
  ../include/apr_file_io.h
 apr_tables.o: apr_tables.c ../include/apr_config.h \
- ../include/apr_general.h ../include/apr_errno.h $(INCDIR)/apr_pools.h \
- ../include/apr_lib.h ../include/apr_file_io.h ../misc/unix/misc.h
+ ../include/apr_general.h ../include/apr_errno.h \
+ ../include/apr_pools.h ../include/apr_lib.h ../include/apr_file_io.h \
+ ../misc/unix/misc.h ../include/apr_getopt.h
