--- a/configure.in
+++ b/configure.in
@@ -57,6 +57,28 @@ AC_CHECK_SIZEOF(short, 2)
 AC_CHECK_SIZEOF(long double, 12)
 AC_CHECK_SIZEOF(long long, 8)
 
+if test "$ac_cv_sizeof_short" = "2"; then
+    short_value=short
+fi
+if test "$ac_cv_sizeof_int" = "4"; then
+    int_value=int
+fi
+if test "$ac_cv_sizeof_long" = "8"; then
+    long_value=long
+fi
+if test "$ac_cv_sizeof_long_double" = "8"; then
+    long_value="long double"
+fi
+if test "$ac_cv_sizeof_long_long" = "8"; then
+    long_value="long long"
+fi
+if test "$ac_cv_sizeof_longlong" = "8"; then
+    long_value="__int64"
+fi
+AC_SUBST(short_value)
+AC_SUBST(int_value)
+AC_SUBST(long_value)
+
 AC_CHECK_SIZEOF_EXTENDED([#include <sys/types.h>], ssize_t, 8)
 
 # Use /bin/sh if it exists, otherwise go looking for sh in the path
@@ -225,7 +247,9 @@ AC_ARG_ENABLE(threads,
     AC_MSG_RESULT(no)
   else
     if test "$enableval" = "pthread"; then
-      AC_CHECK_HEADERS(pthread.h, [ AC_DEFINE(APR_HAS_THREADS, 1) ], [ AC_DEFINE(APR_HAS_THREADS, 0) ] )
+      AC_CHECK_HEADERS(pthread.h, [ 
+          AC_DEFINE(APR_HAS_THREADS, 1) ], [ 
+          AC_DEFINE(APR_HAS_THREADS, 0) ] )
       AC_MSG_RESULT(yes)
     else
       AC_MSG_RESULT(no)
@@ -233,8 +257,9 @@ AC_ARG_ENABLE(threads,
   fi
 ],
 [
-  AC_CHECK_HEADERS(pthread.h, [ AC_DEFINE(APR_HAS_THREADS, 1) ], [ AC_DEFINE(APR_HAS_THREADS, 0) ] )
-   
+  AC_CHECK_HEADERS(pthread.h, [
+          AC_DEFINE(APR_HAS_THREADS, 1) ], [ 
+          AC_DEFINE(APR_HAS_THREADS, 0) ] )
 ]) 
 
 
@@ -261,7 +286,8 @@ do
         SUBDIRS="$SUBDIRS $dir/$DEFAULT_OSDIR "
     fi
 done
+
 MAKEFILE3="test/Makefile"
 AC_SUBST(SUBDIRS)
 AC_SUBST(MODULES)
-AC_OUTPUT($MAKEFILE1 $MAKEFILE2 $MAKEFILE3)
+AC_OUTPUT($MAKEFILE1 $MAKEFILE2 $MAKEFILE3 include/apr.h)
