--- a/configure.in
+++ b/configure.in
@@ -79,6 +79,26 @@ AC_SUBST(short_value)
 AC_SUBST(int_value)
 AC_SUBST(long_value)
 
+if test "$ac_cv_type_off_t" = "yes"; then
+    off_t_value="off_t"
+else
+    off_t_value="ap_int32_t"
+fi
+if test "$ac_cv_type_size_t" = "yes"; then
+    size_t_value="size_t"
+else
+    size_t_value="ap_int32_t"
+fi
+if test "$ac_cv_type_ssize_t" = "yes"; then
+    ssize_t_value="ssize_t"
+else
+    ssize_t_value="ap_int32_t"
+fi
+
+AC_SUBST(off_t_value)
+AC_SUBST(size_t_value)
+AC_SUBST(ssize_t_value)
+
 AC_CHECK_SIZEOF_EXTENDED([#include <sys/types.h>], ssize_t, 8)
 
 # Use /bin/sh if it exists, otherwise go looking for sh in the path
@@ -216,6 +236,14 @@ AC_TYPE_SIZE_T
 AC_FUNC_MMAP
 AC_FUNC_SETPGRP
 
+if test "$ac_cv_func_mmap_fixed_mapped" = "yes"; then 
+    mmap="#define APR_HAS_MMAP 1"
+    AC_SUBST(mmap)
+else
+    mmap="#define APR_HAS_MMAP 0"
+    AC_SUBST(mmap)
+fi
+
 AC_MSG_CHECKING(looking for union semun in sys/sem.h)
 AC_TRY_COMPILE([
 #include <sys/types.h>
@@ -243,13 +271,16 @@ AC_ARG_ENABLE(threads,
 [  --enable-threads  Enable threading support in APR.],
 [
   if test "$enableval" = "no"; then 
-    AC_DEFINE(APR_HAS_THREADS, 0)
+    threads="#define APR_HAS_THREADS 0"
+    AC_SUBST(threads)
     AC_MSG_RESULT(no)
   else
     if test "$enableval" = "pthread"; then
       AC_CHECK_HEADERS(pthread.h, [ 
-          AC_DEFINE(APR_HAS_THREADS, 1) ], [ 
-          AC_DEFINE(APR_HAS_THREADS, 0) ] )
+          threads="#define APR_HAS_THREADS 1"
+          AC_SUBST(threads) ], [
+          threads="#define APR_HAS_THREADS 0"
+          AC_SUBST(threads) ] )
       AC_MSG_RESULT(yes)
     else
       AC_MSG_RESULT(no)
@@ -258,8 +289,10 @@ AC_ARG_ENABLE(threads,
 ],
 [
   AC_CHECK_HEADERS(pthread.h, [
-          AC_DEFINE(APR_HAS_THREADS, 1) ], [ 
-          AC_DEFINE(APR_HAS_THREADS, 0) ] )
+          threads="#define APR_HAS_THREADS 1"
+          AC_SUBST(threads) ], [
+          threads="#define APR_HAS_THREADS 0"
+          AC_SUBST(threads) ] )
 ]) 
 
 
