--- a/configure.in
+++ b/configure.in
@@ -177,10 +177,10 @@ AC_CHECK_HEADERS(conio.h)
 AC_CHECK_HEADERS(crypt.h)
 AC_CHECK_HEADERS(ctype.h)
 AC_CHECK_HEADERS(dir.h)
-AC_CHECK_HEADERS(dirent.h)
-AC_CHECK_HEADERS(errno.h)
+AC_CHECK_HEADERS(dirent.h, direnth="1", dirent="0")
+AC_CHECK_HEADERS(errno.h, errnoh="1", errnoh="0")
 AC_CHECK_HEADERS(net/errno.h)
-AC_CHECK_HEADERS(fcntl.h)
+AC_CHECK_HEADERS(fcntl.h, fcntlh="1", fcntl="0")
 AC_CHECK_HEADERS(features.h)
 AC_CHECK_HEADERS(grp.h)
 AC_CHECK_HEADERS(io.h)
@@ -194,9 +194,9 @@ AC_CHECK_HEADERS(process.h)
 AC_CHECK_HEADERS(pwd.h)
 AC_CHECK_HEADERS(setjmp.h)
 AC_CHECK_HEADERS(signal.h)
-AC_CHECK_HEADERS(stdarg.h)
+AC_CHECK_HEADERS(stdarg.h, stdargh="1", stdargh="0")
 AC_CHECK_HEADERS(stddef.h)
-AC_CHECK_HEADERS(stdio.h)
+AC_CHECK_HEADERS(stdio.h, stdioh="1", stdioh"0")
 AC_CHECK_HEADERS(stdlib.h)
 AC_CHECK_HEADERS(string.h)
 AC_CHECK_HEADERS(sysapi.h)
@@ -207,14 +207,14 @@ AC_CHECK_HEADERS(sys/time.h)
 AC_CHECK_HEADERS(sys/times.h)
 AC_CHECK_HEADERS(tpfeq.h)
 AC_CHECK_HEADERS(tpfio.h)
-AC_CHECK_HEADERS(sys/uio.h)
+AC_CHECK_HEADERS(sys/uio.h, sys_uioh="1", sys_uioh="0")
 AC_CHECK_HEADERS(unistd.h)
 AC_CHECK_HEADERS(poll.h)
 AC_CHECK_HEADERS(unix.h)
 AC_CHECK_HEADERS(winsock.h)
 
 AC_CHECK_HEADERS(arpa/inet.h)
-AC_CHECK_HEADERS(netinet/in.h)
+AC_CHECK_HEADERS(netinet/in.h, netinet_inh="1", netinet_inh="0")
 
 AC_CHECK_HEADERS(sys/file.h)
 AC_CHECK_HEADERS(sys/ioctl.h)
@@ -225,7 +225,7 @@ AC_CHECK_HEADERS(sys/select.h)
 AC_CHECK_HEADERS(sys/signal.h)
 AC_CHECK_HEADERS(sys/socket.h)
 AC_CHECK_HEADERS(sys/stat.h)
-AC_CHECK_HEADERS(sys/types.h)
+AC_CHECK_HEADERS(sys/types.h, sys_typesh="1", sys_typesh="0")
 AC_CHECK_HEADERS(sys/wait.h)
 
 AC_CHECK_HEADERS(kernel/OS.h)
@@ -272,14 +272,20 @@ AC_ARG_ENABLE(threads,
 [
   if test "$enableval" = "no"; then 
     threads="#define APR_HAS_THREADS 0"
+    pthreadh="0"
     AC_SUBST(threads)
+    AC_SUBST(pthreadh)
     AC_MSG_RESULT(no)
   else
     if test "$enableval" = "pthread"; then
       AC_CHECK_HEADERS(pthread.h, [ 
           threads="#define APR_HAS_THREADS 1"
+          pthreadh="1"
+          AC_SUBST(pthreadh)
           AC_SUBST(threads) ], [
           threads="#define APR_HAS_THREADS 0"
+          pthreadh="0"
+          AC_SUBST(pthreadh)
           AC_SUBST(threads) ] )
       AC_MSG_RESULT(yes)
     else
@@ -290,8 +296,12 @@ AC_ARG_ENABLE(threads,
 [
   AC_CHECK_HEADERS(pthread.h, [
           threads="#define APR_HAS_THREADS 1"
+          pthreadh="1"
+          AC_SUBST(pthreadh)
           AC_SUBST(threads) ], [
           threads="#define APR_HAS_THREADS 0"
+          pthreadh="0"
+          AC_SUBST(pthreadh)
           AC_SUBST(threads) ] )
 ]) 
 
@@ -306,6 +316,15 @@ AC_SUBST(OSDIR)
 AC_SUBST(DEFAULT_OSDIR)
 AC_SUBST(LIBPREFIX)
 AC_SUBST(EXEEXT)
+AC_SUBST(errnoh)
+AC_SUBST(direnth)
+AC_SUBST(fcntlh)
+AC_SUBST(netinet_inh)
+AC_SUBST(stdargh)
+AC_SUBST(stdioh)
+AC_SUBST(sys_typesh)
+AC_SUBST(sys_uioh)
+
 
 MAKEFILE1="Makefile lib/Makefile "
 SUBDIRS="lib "
