Fix the logic in blocking vs non-blocking pipes to children.  It only makes sense to change the blocking attributes of a pipe if we actually are successful in creating the pipe.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@59501 13f79535-47bb-0310-9956-ffa450edef68

--- a/locks/unix/Makefile.in
+++ b/locks/unix/Makefile.in
@@ -53,17 +53,17 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-crossproc.o: crossproc.c ../../include/apr_lock.h \
- ../../include/apr_general.h ../../include/apr_config.h \
+crossproc.o: crossproc.c locks.h ../../include/apr_config.h \
+ ../../include/apr_general.h ../../include/apr.h \
  ../../include/apr_errno.h ../../include/apr_lib.h \
- ../../include/apr_file_io.h locks.h
-intraproc.o: intraproc.c ../../include/apr_config.h \
- ../../include/apr_lock.h ../../include/apr_general.h \
+ ../../include/apr_file_io.h ../../include/apr_lock.h
+intraproc.o: intraproc.c locks.h ../../include/apr_config.h \
+ ../../include/apr_general.h ../../include/apr.h \
  ../../include/apr_errno.h ../../include/apr_lib.h \
- ../../include/apr_file_io.h locks.h
-locks.o: locks.c ../../include/apr_general.h \
- ../../include/apr_config.h ../../include/apr_errno.h \
+ ../../include/apr_file_io.h ../../include/apr_lock.h
+locks.o: locks.c locks.h ../../include/apr_config.h \
+ ../../include/apr_general.h ../../include/apr.h \
+ ../../include/apr_errno.h ../../include/apr_lib.h \
+ ../../include/apr_file_io.h ../../include/apr_lock.h \
  ../../include/apr_portable.h ../../include/apr_thread_proc.h \
- ../../include/apr_file_io.h ../../include/apr_win.h \
- ../../include/apr_network_io.h ../../include/apr_lock.h \
- ../../include/apr_time.h ../../include/apr_lib.h locks.h
+ ../../include/apr_network_io.h ../../include/apr_time.h
