--- a/file_io/unix/Makefile.in
+++ b/file_io/unix/Makefile.in
@@ -57,33 +57,39 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-dir.o: dir.c fileio.h ../../include/apr_general.h \
- ../../include/apr_config.h ../../include/apr_errno.h \
- ../../include/apr_file_io.h ../../include/apr_lib.h \
- ../../include/apr_portable.h ../../include/apr_thread_proc.h \
- ../../include/apr_win.h ../../include/apr_network_io.h \
+dir.o: dir.c fileio.h ../../include/apr_config.h \
+ ../../include/apr_general.h ../../include/apr.h \
+ ../../include/apr_errno.h ../../include/apr_file_io.h \
+ ../../include/apr_lib.h ../../include/apr_portable.h \
+ ../../include/apr_thread_proc.h ../../include/apr_network_io.h \
  ../../include/apr_lock.h ../../include/apr_time.h
-fileacc.o: fileacc.c fileio.h ../../include/apr_general.h \
- ../../include/apr_config.h ../../include/apr_errno.h \
- ../../include/apr_file_io.h ../../include/apr_lib.h
-filedup.o: filedup.c fileio.h ../../include/apr_general.h \
- ../../include/apr_config.h ../../include/apr_errno.h \
- ../../include/apr_file_io.h ../../include/apr_lib.h
-filestat.o: filestat.c fileio.h ../../include/apr_general.h \
- ../../include/apr_config.h ../../include/apr_errno.h \
- ../../include/apr_file_io.h
-open.o: open.c fileio.h ../../include/apr_general.h \
- ../../include/apr_config.h ../../include/apr_errno.h \
- ../../include/apr_file_io.h ../../include/apr_portable.h \
- ../../include/apr_thread_proc.h ../../include/apr_win.h \
- ../../include/apr_network_io.h ../../include/apr_lock.h \
- ../../include/apr_time.h ../../include/apr_lib.h
-pipe.o: pipe.c fileio.h ../../include/apr_general.h \
- ../../include/apr_config.h ../../include/apr_errno.h \
- ../../include/apr_file_io.h ../../include/apr_lib.h
-readwrite.o: readwrite.c fileio.h ../../include/apr_general.h \
- ../../include/apr_config.h ../../include/apr_errno.h \
- ../../include/apr_file_io.h ../../include/apr_lib.h
-seek.o: seek.c fileio.h ../../include/apr_general.h \
- ../../include/apr_config.h ../../include/apr_errno.h \
- ../../include/apr_file_io.h
+fileacc.o: fileacc.c fileio.h ../../include/apr_config.h \
+ ../../include/apr_general.h ../../include/apr.h \
+ ../../include/apr_errno.h ../../include/apr_file_io.h \
+ ../../include/apr_lib.h
+filedup.o: filedup.c fileio.h ../../include/apr_config.h \
+ ../../include/apr_general.h ../../include/apr.h \
+ ../../include/apr_errno.h ../../include/apr_file_io.h \
+ ../../include/apr_lib.h
+filestat.o: filestat.c fileio.h ../../include/apr_config.h \
+ ../../include/apr_general.h ../../include/apr.h \
+ ../../include/apr_errno.h ../../include/apr_file_io.h \
+ ../../include/apr_lib.h
+open.o: open.c fileio.h ../../include/apr_config.h \
+ ../../include/apr_general.h ../../include/apr.h \
+ ../../include/apr_errno.h ../../include/apr_file_io.h \
+ ../../include/apr_lib.h ../../include/apr_portable.h \
+ ../../include/apr_thread_proc.h ../../include/apr_network_io.h \
+ ../../include/apr_lock.h ../../include/apr_time.h
+pipe.o: pipe.c fileio.h ../../include/apr_config.h \
+ ../../include/apr_general.h ../../include/apr.h \
+ ../../include/apr_errno.h ../../include/apr_file_io.h \
+ ../../include/apr_lib.h
+readwrite.o: readwrite.c fileio.h ../../include/apr_config.h \
+ ../../include/apr_general.h ../../include/apr.h \
+ ../../include/apr_errno.h ../../include/apr_file_io.h \
+ ../../include/apr_lib.h
+seek.o: seek.c fileio.h ../../include/apr_config.h \
+ ../../include/apr_general.h ../../include/apr.h \
+ ../../include/apr_errno.h ../../include/apr_file_io.h \
+ ../../include/apr_lib.h
