--- a/misc/unix/Makefile.in
+++ b/misc/unix/Makefile.in
@@ -51,10 +51,13 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-getopt.o: getopt.c misc.h ../../include/apr_general.h \
- ../../include/apr_config.h ../../include/apr_errno.h \
- ../../include/apr_file_io.h ../../include/apr_getopt.h
-start.o: start.c ../../include/apr_general.h \
- ../../include/apr_config.h ../../include/apr_errno.h \
- ../../include/apr_pools.h ../../include/apr_lib.h \
- ../../include/apr_file_io.h misc.h ../../include/apr_getopt.h
+getopt.o: getopt.c misc.h ../../include/apr_config.h \
+ ../../include/apr_general.h ../../include/apr.h \
+ ../../include/apr_errno.h ../../include/apr_pools.h \
+ ../../include/apr_lib.h ../../include/apr_file_io.h \
+ ../../include/apr_getopt.h
+start.o: start.c misc.h ../../include/apr_config.h \
+ ../../include/apr_general.h ../../include/apr.h \
+ ../../include/apr_errno.h ../../include/apr_pools.h \
+ ../../include/apr_lib.h ../../include/apr_file_io.h \
+ ../../include/apr_getopt.h
