--- a/time/unix/Makefile.in
+++ b/time/unix/Makefile.in
@@ -51,13 +51,13 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-access.o: access.c atime.h ../../include/apr_time.h \
- ../../include/apr_general.h ../../include/apr_config.h \
- ../../include/apr_errno.h ../../include/apr_lib.h \
+access.o: access.c atime.h ../../include/apr_config.h \
+ ../../include/apr_time.h ../../include/apr_general.h \
+ ../../include/apr.h ../../include/apr_errno.h ../../include/apr_lib.h \
  ../../include/apr_file_io.h
-time.o: time.c atime.h ../../include/apr_time.h \
- ../../include/apr_general.h ../../include/apr_config.h \
- ../../include/apr_errno.h ../../include/apr_lib.h \
+time.o: time.c atime.h ../../include/apr_config.h \
+ ../../include/apr_time.h ../../include/apr_general.h \
+ ../../include/apr.h ../../include/apr_errno.h ../../include/apr_lib.h \
  ../../include/apr_file_io.h ../../include/apr_portable.h \
- ../../include/apr_thread_proc.h ../../include/apr_win.h \
- ../../include/apr_network_io.h ../../include/apr_lock.h
+ ../../include/apr_thread_proc.h ../../include/apr_network_io.h \
+ ../../include/apr_lock.h
